--- a/Views/Students/EditMemberships.cshtml
+++ b/Views/Students/EditMemberships.cshtml
@@ -1,4 +1,4 @@
-﻿@model Assignment1.Models.Student
+﻿@model Assignment1.Models.ViewModels.CommunityViewModel
 
 @{ ViewData["Title"] = "EditMemberships"; }
 
@@ -6,27 +6,34 @@
 
 <h4>Student</h4>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="EditMemberships">
-        
-            <div class="form-group">
-                <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.FullName)
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.FullName)
-                </dd>
-            </div>
-         
-            <div class="form-group">
-                
-            </div>
 
+            <dl class="row">
+
+                @foreach (var item in Model.Communities){
+                    
+                    bool addCom = Model.CommunityMemberships.Where(i => i.CommunityID == item.ID).Count() > 0;
+
+                    if (!addCom)
+                    {
+                        @item.Title <a asp-action="AddMemberships" asp-route-studentId="@Model.Students.First().ID" asp-route-communityId="@item.ID">Register</a>
+                    }
+
+                    else
+                    {
+                        @item.Title  <a asp-action="RemoveMemberships" asp-route-studentId="@Model.Students.First().ID" asp-route-communityId="@item.ID">Unregister</a>
+                    }
+
+                 }
+
+            </dl>
         </form>
     </div>
 </div>
-
+<hr />
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
