--- a/Views/Students/Index.cshtml
+++ b/Views/Students/Index.cshtml
@@ -1,8 +1,5 @@
-﻿@model IEnumerable<Assignment1.Models.Student>
-
-@{
-    ViewData["Title"] = "Index";
-}
+﻿@model Assignment1.Models.ViewModels.CommunityViewModel
+@{ ViewData["Title"] = "Index"; }
 
 <h1>Index</h1>
 
@@ -13,37 +10,61 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                LastName
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                FirstName
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EnrollmentDate)
+                EnrollmentDate
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EnrollmentDate)
-            </td>
-            <td>
-                <a asp-action="Select" asp-route-id="@item.ID">Select</a> |
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="EditMemberships" asp-route-id="@item.ID">Edit Memberships</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Students)
+        {
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.LastName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.FirstName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.EnrollmentDate)
+    </td>
+    <td>
+        <a asp-action="Index" asp-route-id="@item.ID">Select</a> |
+        <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+        <a asp-action="EditMemberships" asp-route-id="@item.ID">Edit Memberships</a> |
+        <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+        <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+    </td>
+</tr>}
     </tbody>
 </table>
+@if (Model.CommunityMemberships != null)
+{
+<h3>
+    Members of the Community:
+</h3>
+                <table class="table">
+                    <tr>
+                        @if (Model.CommunityMemberships.Count() > 0)
+                        {
+                        <th> Name </th> 
+                        }
+                        
+                        else
+                        {
+                    <th> No Student record exist </th>}
+                    </tr>
+                    @foreach (var item in Model.CommunityMemberships.Select(i => i.Community))
+                    {
+                        <tr>
+                            <td>
+                                @item.Title
+                            </td>
+                        </tr>}
+                </table>}
