files modified by Rutvik Patel

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 }
 
 <h1>Welcome, Entity Framework welcomes you!</h1><br />
-<h1>I'm Rutvik Patel <br />I am student of Computer Engineering Technology- Computing Science of Algonquin College.</h1>
+<h1> Student of Computer Engineering Technology- Computing Science of Algonquin College</h1>
 
