--- a/Views/Communities/Index.cshtml
+++ b/Views/Communities/Index.cshtml
@@ -38,7 +38,7 @@
                 </td>
                 <td>
                     <a asp-action="Index" asp-route-id="@item.ID">Select</a> |
-                    <a asp-action="Ads" asp-route-id="@item.ID">Ads</a> |
+                    <a asp-controller="Advertisements" asp-action="Index" asp-route-id="@item.ID">Ads</a> |
                     <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
