--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,15 @@
 @{
     ViewData["Title"] = "Index";
 }
+<style>
+    
 
-<h1>Welcome, Entity Framework welcomes you!</h1><br />
+h1 { font-family: "Times New Roman"; 
+     letter-spacing: 5px; 
+}
+
+</style>
+<br />
+<h1>Welcome, Entity Framework welcomes you!</h1><br /><br /><br />
 <h1> Student of Computer Engineering Technology- Computing Science of Algonquin College</h1>
 
