--- a/Views/Students/Delete.cshtml
+++ b/Views/Students/Delete.cshtml
@@ -3,7 +3,14 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<style>
 
+
+    h1 {
+        font-family: "Times New Roman";
+        letter-spacing: 5px;
+    }
+</style>
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
