--- a/Views/Students/EditMemberships.cshtml
+++ b/Views/Students/EditMemberships.cshtml
@@ -1,7 +1,14 @@
 ﻿@model Assignment1.Models.ViewModels.CommunityViewModel
 
 @{ ViewData["Title"] = "EditMemberships"; }
+<style>
 
+
+    h1 {
+        font-family: "Times New Roman";
+        letter-spacing: 5px;
+    }
+</style>
 <h1>Edit</h1>
 
 <h4>Student</h4>
