--- a/Views/Advertisements/Delete.cshtml
+++ b/Views/Advertisements/Delete.cshtml
@@ -3,7 +3,14 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<style>
 
+
+    h1 {
+        font-family: "Times New Roman";
+        letter-spacing: 5px;
+    }
+</style>
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -26,7 +33,7 @@
     </dl>
 
     <form asp-action="Delete">
-        <input type="hidden" asp-for="AdvertisementId" />
+        <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
