--- a/Views/Communities/Create.cshtml
+++ b/Views/Communities/Create.cshtml
@@ -3,7 +3,14 @@
 @{
     ViewData["Title"] = "Create";
 }
+<style>
 
+
+    h1 {
+        font-family: "Times New Roman";
+        letter-spacing: 5px;
+    }
+</style>
 <h1>Create</h1>
 
 <h4>Community</h4>
