--- a/Views/Communities/Edit.cshtml
+++ b/Views/Communities/Edit.cshtml
@@ -3,7 +3,14 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<style>
 
+
+    h1 {
+        font-family: "Times New Roman";
+        letter-spacing: 5px;
+    }
+</style>
 <h1>Edit</h1>
 
 <h4>Community</h4>
