--- a/Views/Students/Details.cshtml
+++ b/Views/Students/Details.cshtml
@@ -3,7 +3,14 @@
 @{
     ViewData["Title"] = "Details";
 }
+<style>
 
+
+    h1 {
+        font-family: "Times New Roman";
+        letter-spacing: 5px;
+    }
+</style>
 <h1>Details</h1>
 
 <div>
