--- a/Views/Students/Index.cshtml
+++ b/Views/Students/Index.cshtml
@@ -1,6 +1,13 @@
 ﻿@model Assignment1.Models.ViewModels.CommunityViewModel
 @{ ViewData["Title"] = "Index"; }
+<style>
 
+
+    h1 {
+        font-family: "Times New Roman";
+        letter-spacing: 5px;
+    }
+</style>
 <h1>Index</h1>
 
 <p>
